# phytonAulas

./: README.md
Hello Word/: hello_world.py  input_teste.py  logica.py  loop.py  var_teste.py
Intermediario/: dicionario.py  exceptions.py  file.py  funtions.py  lista_short.py  random_number.py  teste_lista.py
Intermediario/files/: test.txt  testes.txt
boxplot/: pyproject.toml
boxplot/boxplot/: main.py
boxplot/tests/: test_boxplot.py
charts/: pyproject.toml
charts/charts/: main.py
charts/charts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
charts/tests/: test_charts.py
my_first_project/: aleatorio.py  main.py  media.py
my_sql_first_connection/: pyproject.toml
my_sql_first_connection/my_sql_first_connection/: main.py
my_sql_first_connection/my_sql_first_connection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
my_sql_first_connection/tests/: test_my_sql_first_connection.py
