[tool.poetry]
name = "boxplot"
version = "0.1.0"
description = ""
authors = ["marceloccs <marcelo.custodio95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
