[tool.poetry]
name = "my_sql_first_connection"
version = "0.1.0"
description = "Teste de conecxão com mysql"
authors = ["marceloccs <marcelo.custodio95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mysqlclient = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
